spade-tests/src/snapshots/spade_tests__integration__trait_tests__binding_self_causes_reasonable_error.snap
---
source: spade-tests/src/integration.rs
---
struct X {}
impl X {
    fn test(self, x: bool) -> bool {true}
}

fn main(x: X) -> bool {
    x.test(self: X())
}


error: self specified multiple times
  ┌─ testinput:7:5
  │
3 │     fn test(self, x: bool) -> bool {true}
  │     ------------------------------------- function defined here
  ·
7 │     x.test(self: X())
  │     ^      ---- First specified here
  │     │       
  │     Later specified here
