spade-tests/src/snapshots/spade_tests__integration__trait_tests__blanket_impl_is_disallowed_gracefully.snap
---
source: spade-tests/src/integration.rs
snapshot_kind: text
---
impl<T> T {
    fn method(self) {}
}


error: Impl target must be a concrete type
  ┌─ testinput:1:9
  │
1 │ impl<T> T {
  │      -  ^ Impl on generic type
  │      │   
  │      T defined here
