spade-tests/src/snapshots/spade_tests__integration__trait_tests__calling_methods_with_the_wrong_named_args.snap
---
source: spade-tests/src/integration.rs
---
struct X {}
impl X {
    fn test(self, x: bool) -> bool {true}
}

fn main(x: X) -> bool {
    x.test(y: 1)
}


error: No such argument: y
  ┌─ testinput:7:12
  │
3 │     fn test(self, x: bool) -> bool {true}
  │     ------------------------------------- function defined here
  ·
7 │     x.test(y: 1)
  │            ^ No such argument
