spade-tests/src/snapshots/spade_tests__integration__trait_tests__calling_methods_with_the_wrong_number_of_params_errors.snap
---
source: spade-tests/src/integration.rs
---
struct X {}
impl X {
    fn test(self) -> bool {true}
}

fn main(x: X) -> bool {
    x.test(1)
}


error: Too many arguments. Expected 0, got 1
  ┌─ testinput:7:12
  │
3 │     fn test(self) -> bool {true}
  │     ---------------------------- function defined here
  ·
7 │     x.test(1)
  │            ^
  │            │
  │            Expected 0 arguments
  │            Unexpected argument
