spade-tests/src/snapshots/spade_tests__integration__trait_tests__chained_use_of_pipeline_method_is_disallowed_with_local_args.snap
---
source: spade-tests/src/integration.rs
---
struct T {
    payload: bool,
}

impl T {
    pipeline(1) test(self, clk: clock, num: int<8>) -> T {
        reg;
            self
    }
}

pipeline(1) test(clk: clock, t: T) -> T {
        let x = 0;
        let out = t
            .inst(1) test(clk, x)
            .inst(1) test(clk, x);
    reg;
        out
}


error: All subexpressions need the same pipeline delay
   ┌─ testinput:16:27
   │  
14 │           let out = t
   │ ╭───────────────────'
15 │ │             .inst(1) test(clk, x)
   │ ╰─────────────────────────────────' But this has delay 1
16 │               .inst(1) test(clk, x);
   │                             ^^^ This has delay 0
